# simple-wintop

./: Cargo.toml  readme.md  readme.zh-cn.md
.github/workflows/: build.yml
src/: collector.rs  data.rs  debug.rs  main.rs
src/ui/: bars.rs  info.rs  mod.rs
